Fixed style bugs and vertical-aligned the fields to top, since middle made the theme very inconvenient with labels floating halfway a field.

--- a/themes/achievo_modern/styles/style.css
+++ b/themes/achievo_modern/styles/style.css
@@ -313,7 +313,7 @@ INPUT.btn_saveandclose
 {
   padding-top: 2px;
   padding-bottom: 2px;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 
